# Nixie-Calculator

./: LICENSE.md  README.md
3DPrints/STL/: HVFIX Part 1.stl  HVFIX Part 2.stl  Nixie Calculator 7segLED Left.stl  Nixie Calculator 7segLED Right.stl  Nixie Calculator B-5870 Display Frame.stl  Nixie Calculator B-5870 Socket Cover.stl  Nixie Calculator Back Shield.stl  Nixie Calculator Bottom.stl  Nixie Calculator Front V2.stl  Nixie Calculator IN-12 Back Shield.stl  Nixie Calculator IN-12 Bottom.stl  Nixie Calculator IN-12 Display Left V2.stl  Nixie Calculator IN-12 Display Right V2.stl  Nixie Calculator IN-12 Front Panel.stl  Nixie Calculator IN-12 LED Board Spacers.stl  Nixie Calculator IN-12 Left.stl  Nixie Calculator IN-12 Right.stl  Nixie Calculator IN-12 Top.stl  Nixie Calculator IN-12 Tube Holder Part 1.stl  Nixie Calculator IN-12 Tube Holder Part 2.stl  Nixie Calculator IN-12 Union Tube V2.stl  Nixie Calculator IN-12A Display Front 3mm Left V2.stl  (+24 more)
Software/Firmware/Controller/main/: CMakeLists.txt  CalcEngineALG.hpp  CalcEngineRPN.hpp  CalcError.hpp  CalcIO.hpp  CalcMath.hpp  CalcWebSocketServer.hpp  Calculator.hpp  Clock.hpp  Controller.hpp  DisplayDriver.hpp  DisplayHAL.hpp  DisplayHAL_B5870.hpp  DisplayHAL_IN12.hpp  DisplayHAL_IN16.hpp  DisplayHAL_IN17.hpp  DisplayHAL_LED.hpp  DisplayHandler.hpp  Errors.hpp  GPS.hpp  Helper.hpp  KeyboardDecoder.hpp  KeyboardHandler.hpp  Lighting.hpp  M7219Driver.hpp  MemRegister.hpp  MenuHandler.hpp  PIR.hpp  Setting.hpp  Settings.hpp  SettingsCache.hpp  Temperature.hpp  idf_component.yml  main.cpp  ubGPSTime.hpp
(+39 files in other folders)
